# DJI_Thermal_Tool

./: .gitignore  AGENTS.md  README.md  copy_metadata.py  extract_metadata.py  jpg2tiff.py  main.py  pyproject.toml
